// Vitest Snapshot v1

exports[`<Header/> > should render authenticated header 1`] = `
<div>
  <header
    class="_header_1gpfr_1"
  >
    <div
      class="_rightNav_1gpfr_23"
    >
      <a
        class="_wrap_1y6kl_1 _appName_1gpfr_9"
        href="/"
      >
        Ponti UI
      </a>
    </div>
    <div
      class="_leftNav_1gpfr_22"
    >
      <a
        class="_wrap_1y6kl_1 _menuItem_1gpfr_28"
        href="/account"
      >
        Account
      </a>
    </div>
  </header>
</div>
`;

exports[`<Header/> > should render unauthenticated header 1`] = `
<div>
  <header
    class="_header_1gpfr_1"
  >
    <div
      class="_rightNav_1gpfr_23"
    >
      <a
        class="_wrap_1y6kl_1 _appName_1gpfr_9"
        href="/"
      >
        Ponti UI
      </a>
    </div>
    <div
      class="_leftNav_1gpfr_22"
    >
      <button
        class="_container_7jj5b_1 _btnText_7jj5b_26"
        data-testid="button"
        type="button"
      >
        Get Started
      </button>
    </div>
  </header>
</div>
`;
